<resources>
    <string name="app_name">オンゲキ-maimaiツール</string>
    <string name="btn_analyzer_text">あならいざもどき2</string>
    <string name="btn_jewedrops_text">ジュエル+しずく数取得</string>
    <string name="btn_playcount_text">プレイ履歴集計</string>
    <string name="btn_scorelog_text">ScoreLog登録</string>
    <string name="btn_settings_text">設定</string>
    <string name="btn_ongekinet_text">オンゲキ-NET</string>
    <string name="btn_maimainet_text">maimai でらっくすNET</string>
    <string name="btn_crop_text">範囲選択撮影</string>
    <string name="btn_overprint_text">親密度解析</string>
    <string name="btn_reset_intimacy_text">データをリセット</string>
    <string name="nav_header_subtitle">親密度解析 &amp; ツール</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="label_name">名前</string>
    <string name="label_current">現在</string>
    <string name="label_goal">目標</string>
    <string name="label_required_items">必要アイテム</string>
    <string name="label_money">マニー</string>
    <string name="items_held_format">所持アイテム: 大 %1$d / 中 %2$d / 小 %3$d</string>
    <string name="money_held_format">所持マニー: %1$s</string>
    <string name="total_report_format">総プレイ回数: %1$d回\n総使用金額: %2$d円</string>
    <string name="placeholder_date">----/--/--</string>
    <string name="placeholder_count">--回</string>
    <string name="placeholder_money_amount">---円</string>
    <string name="placeholder_zero">0</string>
    <string name="placeholder_dash">---</string>
    <string name="items_held_initial">親密度アイテム: 大 0 / 中 0 / 小 0</string>
    <string name="money_held_initial">所持マニー: 0</string>
    <string name="pref_about_title">このアプリについて</string>
    <string name="about_title">このアプリについて</string>
    <string name="about_description">オンゲキ-NET/maimai NETの利用を補助する非公式ツールです。\n親密度の解析やプレイ履歴の集計などを行えます。</string>
    <string name="github_url">https://github.com/cchina33/gekimai-net-app</string>
    <string name="version_format">バージョン %1$s</string>
    <string name="placeholder_version">Version 0.0.0</string>
    <string name="label_links">リンク</string>
    <string name="label_github">GitHub</string>
    <string name="label_github_repository">GitHub リポジトリ</string>
    <string name="menu_ongeki">オンゲキ(WebView)</string>
    <string name="menu_maimai">maimai(WebView)</string>
    <string name="menu_intimacy">親密度データ表</string>
    <string name="btn_daydream_calc">デイドリーム計算</string>
    <string name="daydream_calc_title">デイドリーム計算機</string>
    <string name="label_current_fairies">現在のフェアリーズ所持数 (0〜5)</string>
    <string name="label_current_jewels">現在の所持ジュエル数</string>
    <string name="btn_fetch_jewels">NETから取得</string>
    <string name="result_required_jewels">必要ジュエル数: %1$d</string>
    <string name="result_remaining_jewels">不足分: %1$d</string>
    <string name="hint_fairy_count">枚数を入力</string>
    <string name="hint_jewel_count">ジュエル数を入力</string>
    <string name="update_dialog_title">アップデートのお知らせ</string>
    <string name="update_dialog_message">新しいバージョン (%1$s) が利用可能です。\n\n更新内容:\n%2$s</string>
    <string name="update_btn_download">ダウンロード</string>
    <string name="update_btn_later">後で</string>
    <string name="update_toast_error">アップデート情報の取得に失敗しました</string>
</resources>