<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:background="#EEEEEE"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnSwitchOngeki"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:backgroundTint="#F85887"
            android:text="@string/btn_ongekinet_text" />

        <Button
            android:id="@+id/btnSwitchMaimai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/btn_maimainet_text" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#607D8B"
            android:text="@string/btn_settings_text" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/buttonViewPager"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp" />

</LinearLayout>